# anon-submission

./: CMakeLists.txt  InterfaceGenerator.cpp  README.md  parse_w3c.py  parse_wai.py  parse_webaim.py  run_full_experiment.cpp  user_profiles.json
dataset/: user_profiles.json
scripts/: get_stats.py
